transacción compra de un pack, endpoints:pago& estudiantes_packs
