# cmd/server/docs/swagger.json
@@ -11,6 +11,35 @@
         "version": "1.0"
     },
     "paths": {
+        "/StudentPacks": {
+            "get": {
+                "summary": "Buscar StudentPackss",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/StudentPacks/{dni}": {
+            "get": {
+                "summary": "Buscar StudentPacks",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Item dni",
+                        "name": "dni",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
         "/login": {
             "post": {
                 "consumes": [
@@ -130,6 +159,52 @@
                         "in": "header",
                         "required": true
                     },
+                    {
+                        "type": "integer",
+                        "description": "Item ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/pay": {
+            "get": {
+                "summary": "Buscar pays",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            },
+            "post": {
+                "summary": "Crear pay",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "TOKEN",
+                        "name": "token",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    }
+                }
+            }
+        },
+        "/pay/{id}": {
+            "get": {
+                "summary": "Buscar pay",
+                "parameters": [
                     {
                         "type": "integer",
                         "description": "Item ID",
